# FileTemplate

./: pyproject.toml
app/: demo.py  demo1.py  fil.txt
