[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["shubham_raj <shubham.raj11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
